buildscript {
	configurations.all {
		resolutionStrategy {
			eachDependency {
				if (requested.group == "org.jetbrains.kotlin" && requested.name == "kotlin-compiler-embeddable") {
					useTarget("org.jetbrains.kotlin:kotlin-compiler-embeddable:2.2.10")
				}
			}
		}
	}
}

plugins {
	id 'org.springframework.boot' version '4.0.5'
	id 'org.springframework.boot.aot' version '4.0.5' apply false
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id 'io.spring.javaformat' version '0.0.47' apply false
}

def useChecks = project.hasProperty('cliChecks') ? cliChecks.toBoolean() : true
def useAot = project.hasProperty('aot') ? aot.toBoolean() : false

if (useAot) {
	apply plugin: 'org.springframework.boot.aot'
}

if (useChecks) {
	apply plugin: 'io.spring.javaformat'
	apply plugin: 'checkstyle'

	checkstyle {
		toolVersion = '13.4.0'
		configDirectory = file("src/checkstyle")
	}
}

description = 'Devpack for Spring Cli'
group = 'com.canonical'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
	mavenLocal()
	maven { url 'https://repo.gradle.org/gradle/libs-releases' }
}

ext {
	set('springShellVersion', '3.4.2')
	set('initializrVersion', '0.24.0')
	set('jarchivelibVersion', '1.2.0')
	set('openrewriteVersion', '8.77.1')
	set('antVersion', '1.10.15')
	set('mavenModelVersion', '3.9.14')
	set('jimfsVersion', '1.3.1')
	set('jsonpathVersion', '2.7.0')
	set('jaxbApiVersion', '2.3.1')
	set('jaxbRuntimeVersion', '4.0.7')
	set('jacksonVersion', '2.21.2')
}

configurations.all {
	resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
	resolutionStrategy.eachDependency {
		if (requested.group == 'org.jetbrains.kotlin' && requested.name == 'kotlin-compiler-embeddable') {
			useTarget("org.jetbrains.kotlin:kotlin-compiler-embeddable:2.2.10")
		}
		// workaround vulnerable apache commons versions (transitive of commons-text)
		if (requested.group == 'org.apache.commons' && requested.name == 'commons-lang3') {
			useTarget("org.apache.commons:commons-lang3:3.18.0")
		}
		if (requested.group == 'org.apache.commons' && requested.name == 'commons-compress') {
			useTarget("org.apache.commons:commons-compress:1.28.0")
		}
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-webclient'
	implementation "org.springframework.shell:spring-shell-starter-jna"
	implementation 'io.spring.initializr:initializr-generator'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation 'org.rauschig:jarchivelib'
	implementation 'org.openrewrite:rewrite-java-17'
	implementation 'org.openrewrite:rewrite-maven'
	implementation 'org.openrewrite:rewrite-xml'
	implementation 'org.apache.ant:ant'
	implementation 'org.apache.maven:maven-model'
	implementation 'javax.xml.bind:jaxb-api'
	implementation 'org.glassfish.jaxb:jaxb-runtime'

    implementation 'org.apache.commons:commons-text:1.15.0'
	implementation 'org.yaml:snakeyaml:2.6'
	implementation "org.openrewrite:rewrite-gradle:${openrewriteVersion}"
	implementation "org.openrewrite:rewrite-kotlin:${openrewriteVersion}"
	implementation "org.eclipse.jgit:org.eclipse.jgit:7.6.0.202603022253-r"
	implementation "org.apache.groovy:groovy:4.0.31"
	implementation "org.gradle:gradle-tooling-api:9.4.1"

    testImplementation 'com.google.jimfs:jimfs'
    testImplementation 'org.openrewrite:rewrite-test'
	testImplementation 'org.openrewrite.gradle.tooling:model'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	if (useChecks) {
		checkstyle("io.spring.javaformat:spring-javaformat-checkstyle:0.0.47")
	}
}

dependencyManagement {
	dependencies {
		dependency "org.springframework.shell:spring-shell-starter-jna:${springShellVersion}"
		dependency "org.rauschig:jarchivelib:${jarchivelibVersion}"
		dependency "org.openrewrite:rewrite-test:${openrewriteVersion}"
		dependency "org.openrewrite:rewrite-java-17:${openrewriteVersion}"
		dependency "org.openrewrite:rewrite-xml:${openrewriteVersion}"
		dependency("org.openrewrite:rewrite-maven:${openrewriteVersion}") {
			exclude 'org.slf4j:jcl-over-slf4j'
		}
		dependency "org.openrewrite.gradle.tooling:model:${openrewriteVersion}"
		dependency "org.apache.ant:ant:${antVersion}"
		dependency "org.apache.maven:maven-model:${mavenModelVersion}"
		dependency "com.google.jimfs:jimfs:${jimfsVersion}"
		dependency "javax.xml.bind:jaxb-api:${jaxbApiVersion}"
		dependency "org.glassfish.jaxb:jaxb-runtime:${jaxbRuntimeVersion}"
		dependency "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
	}
	imports {
		mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
		mavenBom "io.spring.initializr:initializr-bom:${initializrVersion}"
	}
}

test {
	useJUnitPlatform {
		if (!project.hasProperty('cliIncludeTags') && !project.hasProperty('cliExcludeTags')) {
			includeTags = ['none()']
		}
		else {
			if (project.hasProperty('cliIncludeTags') && cliIncludeTags.size() > 0) {
				includeTags = cliIncludeTags.split(',')
			}
			if (project.hasProperty('cliExcludeTags') && cliExcludeTags.size() > 0) {
				excludeTags = cliExcludeTags.split(',')
			}
		}

	}
	if (project.hasProperty('cliTestLogging') && (cliTestLogging.isEmpty() ? true : cliTestLogging.toBoolean())) {
		testLogging {
			showStandardStreams = true
			events = ["standardOut", "started", "passed", "failed", "skipped"]
		}
	}
	minHeapSize = "2G"
	maxHeapSize = "4G"
}

task generateGitProperties {
	doLast {
		try {
			def branch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
			def revision = 'git rev-list --max-count 1 --timestamp HEAD'.execute().text.trim()
			def commitHash = revision.split(' ').last()
			def timestamp = revision ? new java.util.Date(java.util.concurrent.TimeUnit.SECONDS.toMillis(revision.split(' ').first() as long)).format("yyyy-MM-dd'T'HH:mm:ssZ") : null
			def commitHashShort = 'git rev-parse --short HEAD'.execute().text.trim()

			File resourcesDir = new File(project.getBuildDir(), 'resources/main')
			File propertiesFile = new File(resourcesDir, 'git.properties')

			if(timestamp) {
				if(!propertiesFile.exists()) {
					resourcesDir.mkdirs()
					propertiesFile.createNewFile()
				}
				propertiesFile.text = """git.branch=${branch}
git.commit.id=${commitHash}
git.commit.id.abbrev=${commitHashShort}
git.commit.time=${timestamp}
"""
			} else {
				project.logger.error('Unable to generate Git properties file.')
			}
		} catch (e) {
			project.logger.error('Unable to generate Git properties file.', e)
		}
	}
}

project.tasks.bootJar.dependsOn('generateGitProperties')

springBoot {
	buildInfo()
	mainClass = 'org.springframework.cli.DevpackForSpringCliApplication'
}

if (useAot) {
	// disable aot generated stuff
	// which enables aot related things
	tasks.named('checkFormatAot') {
		enabled = false
	}

	tasks.named('checkFormatAotTest') {
		enabled = false
	}

	tasks.named('checkstyleAotTest') {
		enabled = false
	}

	tasks.named('checkstyleAot') {
		enabled = false
	}

}

bootJar {
	requiresUnpack '**/kotlin-compiler-embeddable-*.jar'
}
